Propagated all UI changes to Windows 8.1

--- a/Comedian Soundboard.Windows/AudioPage.xaml
+++ b/Comedian Soundboard.Windows/AudioPage.xaml
@@ -51,9 +51,9 @@
             <TextBlock TextWrapping="WrapWholeWords" MaxWidth="175" IsHitTestVisible="False" FontSize="35" FontWeight="Medium" VerticalAlignment="Center" TextAlignment="Center" Text="{Binding Category.Title}"></TextBlock>
             <Grid Margin="20,0,0,0">
                 <Ellipse
-                    Width="115"
-                    Height="115"
-                    Fill="White"
+                    Width="118"
+                    Height="118"
+                    StrokeThickness="8"
                     Loaded="Ellipse_Loaded">
                 </Ellipse>
                 <Ellipse Width="110"  
